Added sortItemsByName